# Flutter

./: .gitignore
ei_ffi_flutter/: .packages  README.md  pubspec.yaml
ei_ffi_flutter/android/app/: CMakeLists.txt  build.gradle  native_ei.cpp
ei_ffi_flutter/android/app/ei_include/: README.txt
ei_ffi_flutter/android/app/ei_include/edge-impulse-sdk/cmake/zephyr/: CMakeLists.txt
ei_ffi_flutter/android/app/ei_include/model-parameters/: dsp_blocks.h  model_metadata.h  model_variables.h
ei_ffi_flutter/android/app/ei_include/tflite-model/: trained_model_compiled.h
ei_ffi_flutter/android/app/src/main/: AndroidManifest.xml
ei_ffi_flutter/android/app/src/main/kotlin/com/example/ei_ffi_flutter/: MainActivity.kt
ei_ffi_flutter/android/app/src/profile/: AndroidManifest.xml
ei_ffi_flutter/ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
ei_ffi_flutter/ios/Runner/: Info.plist
ei_ffi_flutter/ios/Runner.xcodeproj/: project.pbxproj
ei_ffi_flutter/lib/: main.dart  native_ei_ffi.dart
ei_ffi_flutter/test/: widget_test.dart
ei_flutter_tflite/: README.md  pubspec.yaml
ei_flutter_tflite/android/: build.gradle  local.properties
ei_flutter_tflite/android/app/: build.gradle
ei_flutter_tflite/assets/: ei-cup-transfer-learning-tensorflow-lite-int8-quantized-model.lite
ei_flutter_tflite/ios/Flutter/: Generated.xcconfig  flutter_export_environment.sh
ei_flutter_tflite/ios/Runner/: Info.plist
ei_flutter_tflite/ios/Runner.xcodeproj/: project.pbxproj
ei_flutter_tflite/lib/: main.dart
ei_flutter_tflite/lib/screens/: camerascreen.dart  home.dart
(+6 files in other folders)
